src/snapshots/afrotd__parser__tests__interpretation_9.4.1_10.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 10
text: "Nachdem ein von Team A geworfener legaler Vorwärtspass auf\nder B-20 abgefangen wurde, fumbelt B1 an der B-38 und B2 schlägt\nden freien Ball an der B-30 illegal weg. Der Ball fliegt nach vorne und\nins Aus."
ruling: "Team B-Foul. Strafe – 10 Meter vom Punkt des\nFouls. Team B’s Ball, First Down und 10 an der B-20. Hier ist kein Downverlust in der Strafe enthalten, da Team B eine neue Serie nach der\nStrafdurchführung zuerkannt wird (Regel 5.1.1.e.1)."
