src/snapshots/afrotd__parser__tests__interpretation_9.4.1_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 2
text: "Team A versucht ein Fieldgoal von der B-30. Ein Team B-Spieler\nin der Endzone springt vor der Querlatte hoch und schlägt den fliegenden Ball weg. Der Ball geht in die Endzone und wird dort von Team B\nrecovert."
ruling: "Foul für Schlagen des Balles in der Endzone. Das\nErgebnis des Downs ist ein Touchback. Wird die Strafe angenommen,\nresultiert diese in einem Safety."
