src/snapshots/afrotd__parser__tests__interpretation_9.4.1_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 3
text: "Team A versucht ein Fieldgoal von der B-30. Ein Team B-Spieler\nin der Endzone springt vor der Querlatte hoch und schlägt den fliegenden Ball weg. Der Ball fliegt zurück ins Spielfeld."
ruling: "Foul für\nSchlagen des Balles in der Endzone. Während der regulären Spielzeit ergibt das Postscrimmage Kick Enforcement einen Safety durch\ndie Strafe. Der Ball bleibt im Spiel und Team A kann das Ergebnis des\nDowns wählen. Wenn Team A den Ball recovert, keine Punkte erzielt\nund die Strafe annimmt oder sich das Geschehen während einer Extraperiode ereignet, wird die Strafe vom Previous Spot durchgeführt."
