src/snapshots/afrotd__parser__tests__interpretation_9.4.1_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 4
text: "Team A versucht beim Try mittels eines Place Kicks einen Punkt\nzu erzielen. Ein Team B-Spieler in der Endzone springt vor der Querlatte hoch und schlägt den fliegenden Ball weg. Der Ball geht von der\nEndzone aus ins Aus."
ruling: "Foul für Schlagen des Balles in der\nEndzone, Distanzhalbierung vom Previous Spot. Postscrimmage Kick\nEnforcement findet beim Try keine Anwendung (Regel 10.2.3)."
