src/snapshots/afrotd__parser__tests__interpretation_9.4.1_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 5
text: "Team A versucht beim Try mittels eines Place Kicks einen Punkt\nzu erzielen. Ein Team B-Spieler in der Endzone springt vor der Querlatte\nhoch und schlägt den fliegenden Ball weg. Der Ball geht in die Endzone und wird dort von Team A recovert."
ruling: "Foul für Schlagen\ndes Balles in der Endzone. Das Ergebnis des Downs ist ein Touchdown\nbeim Try. Team A kann die Strafe ablehnen und erhält zwei Punkte zuerkannt."
