src/snapshots/afrotd__parser__tests__interpretation_9.4.1_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 6
text: "Team A versucht ein Fieldgoal und B23, der sich in der Endzone\nbefindet, springt vor Querlatte hoch und fängt den Ball."
ruling: "Kein\nFoul."
