src/snapshots/afrotd__parser__tests__interpretation_9.4.1_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 7
text: "Ein im Flug befindlicher Team A-Fumble wird von B1 vorwärts\ngeschlagen und der Ball geht hinter Team A’s Goalline ins Aus."
ruling: "Das Ergebnis des Down ist ein Safety. Das Wegschlagen des\nFumbles gibt dem Ball keinen neuen Antrieb (Regel 8.7.2.b). Team BFoul. Strafe – 10 Meter. A’s Ball nach Bestrafung des Team B-Fouls für\ndas illegale Schlagen eines freien Balles vom Previous Spot."
