src/snapshots/afrotd__parser__tests__interpretation_9.4.1_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 8
text: "Ein Rückpass von Team A wird im Flug von B1 weggeschlagen\nund der Ball geht hinter Team A’s Goalline ins Aus."
ruling: "Safety.\nEin Pass kann in jede Richtung geschlagen werden und der Antrieb des\nBalles kommt vom Team A-Pass (Regel 8.5.1.a)."
