src/snapshots/afrotd__parser__tests__interpretation_9.4.1_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 1
index: 9
text: "Ein fliegender Free Kick wird von einem Team B-Spieler in dessen Endzone gemufft. Während der freie Ball in der Endzone weiterfliegt, schlägt ein Team B-Spieler den Ball von der Endzone ins Aus."
ruling: "Das Ergebnis des Downs ist ein Touchback. Team B-Foul\nfür illegales Schlagen eines Balles in der Endzone. Strafe – 10 Meter\nvom Previous Spot."
